@@ -1,3 +1,3 @@
-Set upstream metadata fields: Bug-Submit.
+Set upstream metadata fields: Bug-Submit, Name.
 Certainty: certain
 Fixed-Lintian-Tags: upstream-metadata-file-is-missing
