@@ -1,1 +1,2 @@
+Name: GNU Autoconf
 Bug-Submit: bug-autoconf@gnu.org
