@@ -1,3 +1,4 @@
+Name: blah
 Bug-Database: http://example.com/blah/trac/newticket
 Repository: http://example.com/blah/svn/trunk/
 Repository-Browse: http://example.com/blah/trac/browser/
