@@ -1,2 +1,3 @@
+Name: autosize
 Repository: http://github.com/jackmoore/autosize.git
 Repository-Browse: https://github.com/jackmoore/autosize
