@@ -1,3 +1,3 @@
-Set upstream metadata fields: Repository, Repository-Browse.
+Set upstream metadata fields: Name, Repository, Repository-Browse.
 Certainty: likely
 Fixed-Lintian-Tags: upstream-metadata-file-is-missing
