@@ -1,2 +1,3 @@
+Name: autosize
 Repository: https://github.com/jackmoore/autosize.git
 Repository-Browse: https://github.com/jackmoore/autosize
