@@ -1,0 +1,4 @@
+Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
+Upstream-Name: blah
+Upstream-Contact: Jelmer Vernooĳ <jelmer@debian.org>
+Source: https://salsa.debian.org/jelmer/blah
