@@ -1,0 +1,40 @@
+{
+  "name": "autosize",
+  "description": "Autosize is a small, stand-alone script to automatically adjust textarea height to fit text.",
+  "version": "4.0.2",
+  "keywords": [
+    "textarea",
+    "form",
+    "ui"
+  ],
+  "files": [
+    "dist",
+    "src"
+  ],
+  "author": {
+    "name": "Jack Moore",
+    "url": "http://www.jacklmoore.com",
+    "email": "hello@jacklmoore.com"
+  },
+  "main": "dist/autosize.js",
+  "license": "MIT",
+  "homepage": "http://www.jacklmoore.com/autosize",
+  "demo": "http://www.jacklmoore.com/autosize",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/jackmoore/autosize.git"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "gaze": "^1.1.2",
+    "jshint": "^2.9.5",
+    "uglify-js": "^3.3.16"
+  },
+  "scripts": {
+    "build": "node build"
+  }
+}
