@@ -1,3 +1,3 @@
-Set upstream metadata fields: Name.
+Set upstream metadata fields: Repository, Repository-Browse.
 Certainty: certain
 Fixed-Lintian-Tags: upstream-metadata-file-is-missing
