@@ -1,3 +1,2 @@
-Name: autosize
 Repository: http://github.com/jackmoore/autosize.git
 Repository-Browse: https://github.com/jackmoore/autosize
