@@ -1,3 +1,4 @@
+Name: Some-Blah
 Bug-Database: https://github.com/blah/Blie/issues
 Repository: https://github.com/blah/Blie.git
 Repository-Browse: https://github.com/blah/Blie
