@@ -1,3 +1,4 @@
+Name: Blah-Blieh
 Bug-Database: https://github.com/example/Blah/issues
 Repository: https://github.com/example/Blah.git
 Repository-Browse: https://github.com/example/Blah
