@@ -1,3 +1,3 @@
-Set upstream metadata fields: Bug-Database, Repository, Repository-Browse.
+Set upstream metadata fields: Bug-Database, Name, Repository, Repository-Browse.
 Certainty: certain
 Fixed-Lintian-Tags: upstream-metadata-file-is-missing
