@@ -1,3 +1,4 @@
+Name: blah
 Repository: https://github.com/example/repo
 Bug-Database: https://github.com/example/tracker/issues
 Repository-Browse: https://github.com/example/repo
