@@ -1,3 +1,4 @@
+Name: PerlIO-eol
 Bug-Database: https://rt.cpan.org/Public/Dist/Display.html?Name=PerlIO-eol
 Repository: https://github.com/shlomif/PerlIO-eol.git
 Repository-Browse: https://github.com/shlomif/PerlIO-eol
