@@ -1,3 +1,3 @@
-Set upstream metadata fields: Repository.
+Set upstream metadata fields: Name, Repository.
 Certainty: certain
 Fixed-Lintian-Tags: upstream-metadata-file-is-missing
