@@ -1,1 +1,2 @@
+Name: blah
 Repository: https://salsa.debian.org/jelmer/lintian-brush
