@@ -1,3 +1,4 @@
+Name: readxl
 Archive: CRAN
 Bug-Database: https://github.com/tidyverse/readxl/issues
 Repository: https://github.com/tidyverse/readxl
